parser/src/test/resources/corpus/invalid/37_else_without_when.ff
rule "Stray Else" {
  else publish fallback
}
